--- a/detail2.html
+++ b/detail2.html
@@ -23,14 +23,13 @@
       </div>
     </header>
     <main>
-      <h1><b>Gud Pizza</b></h1>
-      <img src="assets/images/pizza14.jpeg" alt="gud pizza" class="center"/>
+      <h1><b>Authentic Pizza</b></h1>
+      <img src="assets/images/pizza16.jpeg" alt="authentic pizza" class="center"/>
       <p>
-        This is the original style of pizza, originating in Naples, Italy.
-        Neapolitan pizza is made with a thin, hand-stretched crust that is
-        cooked in a wood-fired oven at a very high temperature. The pizza is
-        typically topped with a simple tomato sauce, mozzarella cheese, and
-        fresh basil.
+        New York-style pizza is known for its large, thin slices. The crust is
+        slightly thicker than Neapolitan pizza, but still thin and crispy. New
+        York-style pizza is typically topped with tomato sauce, mozzarella
+        cheese, and a variety of other toppings.
       </p>
     </main>
   </body>
