--- a/detail4.html
+++ b/detail4.html
@@ -23,14 +23,12 @@
       </div>
     </header>
     <main>
-      <h1><b>Gud Pizza</b></h1>
-      <img src="assets/images/pizza14.jpeg" alt="gud pizza" class="center"/>
+      <h1><b>Big Oven Pizza</b></h1>
+      <img src="assets/images/pizza2.jpeg" alt="Big Oven Pizza" class="center" />
       <p>
-        This is the original style of pizza, originating in Naples, Italy.
-        Neapolitan pizza is made with a thin, hand-stretched crust that is
-        cooked in a wood-fired oven at a very high temperature. The pizza is
-        typically topped with a simple tomato sauce, mozzarella cheese, and
-        fresh basil.
+        California-style pizza is known for its innovative and creative
+        toppings. California-style pizzas often include ingredients such as
+        avocado, goat cheese, and sun-dried tomatoes.
       </p>
     </main>
   </body>
