--- a/detail5.html
+++ b/detail5.html
@@ -23,14 +23,13 @@
       </div>
     </header>
     <main>
-      <h1><b>Gud Pizza</b></h1>
-      <img src="assets/images/pizza14.jpeg" alt="gud pizza" class="center"/>
+      <h1><b>Beri Gud Pizza</b></h1>
+      <img src="assets/images/pizza3.jpeg" alt="Beri Gud Pizza" class="center"/>
       <p>
-        This is the original style of pizza, originating in Naples, Italy.
-        Neapolitan pizza is made with a thin, hand-stretched crust that is
-        cooked in a wood-fired oven at a very high temperature. The pizza is
-        typically topped with a simple tomato sauce, mozzarella cheese, and
-        fresh basil.
+        This thin-crust pizza is known for its light and airy base, achieved
+        through a high-hydration dough and long fermentation process. The dough
+        is stretched out very thin and cooked at high temperatures in a
+        wood-fired oven, resulting in a crispy and slightly charred crust.
       </p>
     </main>
   </body>
