--- a/index.html
+++ b/index.html
@@ -43,26 +43,26 @@
     </div>
     </section>
     <section>
-    <div id="products">
+    <div id="products" class="flex-container">
         <div class="item">
-            <img class="better img" src="assets/images/pizza14.jpeg" alt="pizza" width="250px" height="auto">
-            <p class="style"><b>Pizza</b><br>Rp.-</p>
+            <img class="better img" src="assets/images/pizza14.jpeg" alt="pizza" width="350px" height="auto">
+            <h2 class="style"><a href="detail.html"><b>Gud Pizza</b></a><br>Rp.-</h2>
         </div>
         <div class="item">
             <img class="better img" src="assets/images/pizza16.jpeg" alt="laptop" width="350px" height="auto">
-            <p class="style"><b>Pizza</b><br>Rp.-</p>
+            <h2 class="style"><a href="detail2.html"><b>Authentic Pizza</b></a><br>Rp.-</h2>
         </div>
         <div class="item">
-            <img class="better img" src="assets/images/pizza4.jpeg" alt="laptop" width="250px" height="auto">
-            <p class="style"><b>Pizza</b><br>Rp.-</p>
+            <img class="better img" src="assets/images/pizza4.jpeg" alt="laptop" width="350px" height="auto">
+            <h2 class="style"><a href="detail3.html"><b>Handmade Pizza</b></a><br>Rp.-</h2>
         </div>
         <div class="item">
-            <img class="better img" src="assets/images/pizza2.jpeg" alt="laptop" width="250px" height="auto">
-            <p class="style"><b>Pizza</b><br>Rp.-</p>
+            <img class="better img" src="assets/images/pizza2.jpeg" alt="laptop" width="350px" height="auto">
+            <h2 class="style"><a href="detail4.html"><b>Big oven Pizza</b></a><br>Rp.-</h2>
         </div>
         <div class="item">
-            <img class="better img" src="assets/images/pizza3.jpeg" alt="laptop" width="325px" height="auto">
-            <p class="style"><b>Pizza</b><br>Rp.-</p>
+            <img class="better img" src="assets/images/pizza3.jpeg" alt="laptop" width="350px" height="auto">
+            <h2 class="style"><a href="detail5.html"><b>Beri Gud Pizza</b></a><br>Rp.-</h2>
         </div>
     </div>
     </section>
