--- a/detail3.html
+++ b/detail3.html
@@ -23,14 +23,13 @@
       </div>
     </header>
     <main>
-      <h1><b>Gud Pizza</b></h1>
-      <img src="assets/images/pizza14.jpeg" alt="gud pizza" class="center"/>
+      <h1><b>Handmade Pizza</b></h1>
+      <img src="assets/images/pizza4.jpeg" alt="handmade pizza" class="center"/>
       <p>
-        This is the original style of pizza, originating in Naples, Italy.
-        Neapolitan pizza is made with a thin, hand-stretched crust that is
-        cooked in a wood-fired oven at a very high temperature. The pizza is
-        typically topped with a simple tomato sauce, mozzarella cheese, and
-        fresh basil.
+        Chicago-style pizza, also known as deep-dish pizza, is a thick, doughy
+        pizza with a deep dish crust. The crust is filled with tomato sauce,
+        cheese, and a variety of other toppings. Chicago-style pizza is
+        typically baked in a metal pan.
       </p>
     </main>
   </body>
