--- a/about.html
+++ b/about.html
@@ -18,12 +18,15 @@
     <header>
         <div class="main-header">
             <h3 class="header-info">
-                <a href="index.html">PC/Laptop Shop</a>
+                <a href="index.html">Pizza resto</a>
                 </h3>
                 <nav>
-                    <a href="index.html"><i class="fas fa-home"></i>Home</a>
-                    <a href="price.html"><i class="fas fa-tags"></i>Price</a>
-                    <a href="about.html"><i class="fas fa-exclamation"></i>About Us</a>
+                    <ul class="nav-list">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
                 </nav>
         </div>
     </header>
