--- a/detail.html
+++ b/detail.html
@@ -14,7 +14,7 @@
         </h3>
         <nav>
           <ul class="nav-list">
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
