--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css"></link>
   </head>
   <body>
     <header>
@@ -16,7 +16,7 @@
           <nav>
             <ul class="nav-list">
               <li><a href="index.html">Home</a></li>
-              <li><a href="#about">About</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
