--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="fontawesome-free-6.5.1-web/css/all.css" rel="stylesheet" type="text/css"></link>
+    <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css"></link>
 </head>
     <body>
     <header>
