--- a/about.html
+++ b/about.html
@@ -1,65 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css"></link>
-</head>
-<body>
-    <header>
-        <div class="main-header">
-            <h3 class="header-info">
-                <a href="index.html">Pizza resto</a>
-                </h3>
-                <nav>
-                    <ul class="nav-list">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-        </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header class="main-header">
+      <div class="main-header">
+        <h3 class="header-info">
+          <a href="index.html">Pizza resto</a>
+        </h3>
+        <nav>
+          <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-    <section id="about">
+      <section id="about">
         <div class="about">
-            <div>
-                <h2 class="about">About Us</h2>
-                <p class="about">Hello</p>
-            </div>
-            <div class="image-about">
-                <img src="assets/images/download (5).jfif" alt="About Us" width="450px" height="auto" class="about-us">
-            </div>
+          <div>
+            <h2 class="about">Crafting Happiness, One Slice at a Time</h2>
+            <p class="about">
+              At Pizza Heaven, we're passionate about pizza. We use fresh, local
+              ingredients to create delicious pizzas that bring people together.
+              From our slow-fermented dough to our mouthwatering toppings, every
+              bite is a taste of happiness.
+            </p>
+            <h2 class="about">
+              <b>More than just pizza?</b> You bet! We offer a variety of
+              appetizers, salads, and desserts to satisfy every craving.
+            </h2>
+            <h3 class="about">
+              Come experience the warmth and inviting atmosphere of Pizza
+              Heaven. We're your neighborhood pizzeria for a casual meal or
+              special occasion.
+            </h3>
+            <h1>Stop by or order online today!</h1>
+          </div>
         </div>
-    </section>    
+      </section>
     </main>
     <footer>
-        <div class="center-footer">
-            <div class="main-footer">
-                <div class="left-footer">
-                    <h3 class="info-left"><i class="fas fa-map-pin"></i><b>Address</b></h3>
-                    <p class="info-left">104 Ankuding Street, New Ji, MD</p>
-                </div>
-                <div class="right-footer">
-                    <h3 class="info-right"></i><b>Contacts</b></h3>
-                    <p class="info-right"><i class="fas fa-phone"></i>Phone: 0821********</p>
-                    <p class="info-right"><i class="fab fa-instagram"></i>Instagram: @randomshit</p>
-                </div>
-            </div>
-            <div class="main-footer">
-                <p class="info-center">Copyright &copy; 2023A Designed By Someone</p>
-            </div>
+      <div class="center-footer">
+        <div class="main-footer">
+          <div class="left-footer">
+            <h3 class="info-left">
+              <i class="fas fa-map-pin"></i><b>Address</b>
+            </h3>
+            <p class="info-left">104 Ankuding Street, New Ji, MD</p>
+          </div>
+          <div class="right-footer">
+            <h3 class="info-right"><b>Contacts</b></h3>
+            <p class="info-right">
+              <i class="fas fa-phone"></i>Phone: 0821********
+            </p>
+            <p class="info-right">
+              <i class="fab fa-instagram"></i>Instagram: @randomshit
+            </p>
+          </div>
         </div>
+        <div class="main-footer">
+          <p class="info-center">Copyright &copy; 2023A Designed By Someone</p>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
