--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,20 @@
     <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css"></link>
   </head>
   <body>
-    <header>
-        <div class="main-header">
-          <h3 class="header-info">
-            <a href="index.html">Pizza resto</a>
-          </h3>
-          <nav>
-            <ul class="nav-list">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
+    <header class="main-header">
+      <div class="main-header">
+        <h3 class="header-info">
+          <a href="index.html">Pizza resto</a>
+        </h3>
+        <nav>
+          <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main>
       <div class="contact-container">
         <div class="ilustration">
@@ -97,22 +96,28 @@
         </div>
     </main>
     <footer>
-        <div class="center-footer">
-            <div class="main-footer">
-                <div class="left-footer">
-                    <h3 class="info-left"><i class="fas fa-map-pin"></i><b>Address</b></h3>
-                    <p class="info-left">104 Ankuding Street, New Ji, MD</p>
-                </div>
-                <div class="right-footer">
-                    <h3 class="info-right"></i><b>Contacts</b></h3>
-                    <p class="info-right"><i class="fas fa-phone"></i>Phone: 0821********</p>
-                    <p class="info-right"><i class="fab fa-instagram"></i>Instagram: @randomshit</p>
-                </div>
-            </div>
-            <div class="main-footer">
-                <p class="info-center">Copyright &copy; 2023A Designed By Someone</p>
-            </div>
+      <div class="center-footer">
+        <div class="main-footer">
+          <div class="left-footer">
+            <h3 class="info-left">
+              <i class="fas fa-map-pin"></i><b>Address</b>
+            </h3>
+            <p class="info-left">104 Ankuding Street, New Ji, MD</p>
+          </div>
+          <div class="right-footer">
+            <h3 class="info-right"><b>Contacts</b></h3>
+            <p class="info-right">
+              <i class="fas fa-phone"></i>Phone: 0821********
+            </p>
+            <p class="info-right">
+              <i class="fab fa-instagram"></i>Instagram: @randomshit
+            </p>
+          </div>
         </div>
+        <div class="main-footer">
+          <p class="info-center">Copyright &copy; 2023A Designed By Someone</p>
+        </div>
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
