--- a/detail3.html
+++ b/detail3.html
@@ -8,7 +8,7 @@
     <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css"></link>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <div class="main-header">
         <h3 class="header-info">
           <a href="index.html">Pizza resto</a>
@@ -17,7 +17,6 @@
           <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#services">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -35,21 +34,27 @@
     </main>
     <footer>
       <div class="center-footer">
-          <div class="main-footer">
-              <div class="left-footer">
-                  <h3 class="info-left"><i class="fas fa-map-pin"></i><b>Address</b></h3>
-                  <p class="info-left">104 Ankuding Street, New Ji, MD</p>
-              </div>
-              <div class="right-footer">
-                  <h3 class="info-right"></i><b>Contacts</b></h3>
-                  <p class="info-right"><i class="fas fa-phone"></i>Phone: 0821********</p>
-                  <p class="info-right"><i class="fab fa-instagram"></i>Instagram: @randomshit</p>
-              </div>
+        <div class="main-footer">
+          <div class="left-footer">
+            <h3 class="info-left">
+              <i class="fas fa-map-pin"></i><b>Address</b>
+            </h3>
+            <p class="info-left">104 Ankuding Street, New Ji, MD</p>
           </div>
-          <div class="main-footer">
-              <p class="info-center">Copyright &copy; 2023A Designed By Someone</p>
+          <div class="right-footer">
+            <h3 class="info-right"><b>Contacts</b></h3>
+            <p class="info-right">
+              <i class="fas fa-phone"></i>Phone: 0821********
+            </p>
+            <p class="info-right">
+              <i class="fab fa-instagram"></i>Instagram: @randomshit
+            </p>
           </div>
+        </div>
+        <div class="main-footer">
+          <p class="info-center">Copyright &copy; 2023A Designed By Someone</p>
+        </div>
       </div>
-  </footer>
+    </footer>
   </body>
 </html>
