--- a/index.html
+++ b/index.html
@@ -1,142 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PC/Laptop Shop</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css"></link>
-</head>
-    <body>
-    <header>
-        <div class="main-header">
-            <h3 class="header-info">
-                <a href="index.html">Pizza resto</a>
-                </h3>
-                <nav>
-                    <ul class="nav-list">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-        </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header class="main-header">
+      <div class="main-header">
+        <h3>
+          <a href="index.html">Pizza resto</a>
+        </h3>
+        <nav>
+          <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-    <section id="home">
-    <h1 class="betterstyle">Pizza Resto</h1>
-    <h2 class="betterstyle">Welcome to Pizza Heaven</h2>
-    </section>
-    <section>
-    <div>
-    <h3 class="betterstyle">This is our best seller</h3>
-    <img class="better style img" src="assets/images/pizza14.jpeg" alt="laptop" width="250px" height="auto";>
-    <h4 class="betterstyle"><i>Best Pizza Alert</i></h4>
-    </div>
-    </section>
-    <section>
-    <div id="products" class="flex-container">
-        <div class="item">
-            <img class="better img" src="assets/images/pizza14.jpeg" alt="pizza" width="350px" height="auto">
-            <h2 class="style"><a href="detail.html"><b>Gud Pizza</b></a><br>Rp.-</h2>
+      <section id="home">
+        <h1 class="betterstyle shadowbox">Pizza Resto</h1>
+        <h2 class="betterstyle">Welcome to Pizza Heaven</h2>
+      </section>
+      <section>
+        <div>
+          <h3 class="betterstyle">This is our best seller</h3>
+          <img
+            class="better style img"
+            src="assets/images/pizza14.jpeg"
+            alt="laptop"
+            width="250px"
+            height="auto"
+            ;
+          />
+          <h4 class="betterstyle"><i>Best Pizza Alert</i></h4>
         </div>
-        <div class="item">
-            <img class="better img" src="assets/images/pizza16.jpeg" alt="laptop" width="350px" height="auto">
-            <h2 class="style"><a href="detail2.html"><b>Authentic Pizza</b></a><br>Rp.-</h2>
+      </section>
+      <section>
+        <div id="products" class="flex-container">
+          <div class="item">
+            <img
+              class="better img"
+              src="assets/images/pizza14.jpeg"
+              alt="pizza"
+              width="350px"
+              height="auto"
+            />
+            <h2 class="style">
+              <a href="detail.html"><b>Gud Pizza</b></a
+              ><br />Rp.-
+            </h2>
+          </div>
+          <div class="item">
+            <img
+              class="better img"
+              src="assets/images/pizza16.jpeg"
+              alt="laptop"
+              width="350px"
+              height="auto"
+            />
+            <h2 class="style">
+              <a href="detail2.html"><b>Authentic Pizza</b></a
+              ><br />Rp.-
+            </h2>
+          </div>
+          <div class="item">
+            <img
+              class="better img"
+              src="assets/images/pizza4.jpeg"
+              alt="laptop"
+              width="350px"
+              height="auto"
+            />
+            <h2 class="style">
+              <a href="detail3.html"><b>Handmade Pizza</b></a
+              ><br />Rp.-
+            </h2>
+          </div>
+          <div class="item">
+            <img
+              class="better img"
+              src="assets/images/pizza2.jpeg"
+              alt="laptop"
+              width="350px"
+              height="auto"
+            />
+            <h2 class="style">
+              <a href="detail4.html"><b>Big oven Pizza</b></a
+              ><br />Rp.-
+            </h2>
+          </div>
+          <div class="item">
+            <img
+              class="better img"
+              src="assets/images/pizza3.jpeg"
+              alt="laptop"
+              width="350px"
+              height="auto"
+            />
+            <h2 class="style">
+              <a href="detail5.html"><b>Beri Gud Pizza</b></a
+              ><br />Rp.-
+            </h2>
+          </div>
         </div>
-        <div class="item">
-            <img class="better img" src="assets/images/pizza4.jpeg" alt="laptop" width="350px" height="auto">
-            <h2 class="style"><a href="detail3.html"><b>Handmade Pizza</b></a><br>Rp.-</h2>
-        </div>
-        <div class="item">
-            <img class="better img" src="assets/images/pizza2.jpeg" alt="laptop" width="350px" height="auto">
-            <h2 class="style"><a href="detail4.html"><b>Big oven Pizza</b></a><br>Rp.-</h2>
-        </div>
-        <div class="item">
-            <img class="better img" src="assets/images/pizza3.jpeg" alt="laptop" width="350px" height="auto">
-            <h2 class="style"><a href="detail5.html"><b>Beri Gud Pizza</b></a><br>Rp.-</h2>
-        </div>
-    </div>
-    </section>
-    <section id="pricing-table">
+      </section>
+      <section id="pricing-table">
         <div class="container">
-            <div class="tab">
-                <div class="tab-header">
-                        <div>
-                            <h1 class="name">Mid Boi</h1>
-                        </div>
-                        <div>
-                            <h2 class="price">Rp 45k</h2>
-                        </div>
-                    </div>
-                    <hr>
-                    <ul class="list">
-                        <li>Pizza of your choice</li>
-                        <li>2 Snack of your choice</li>
-                    </ul>
-                    <button>Order RN</button>
-                </div>
-                <div class="tab">
-                    <div class="tab-header">
-                        <div>
-                            <h1 class="name">Big Boi</h1>
-                        </div>
-                        <div>
-                            <h2 class="price">Rp 65k</h2>
-                        </div>
-                    </div>
-                    <hr>
-                    <ul class="list">
-                        <li>Pizza of your choice</li>
-                        <li>Pasta/Rice of your choice</li>
-                        <li>Snack of you choice</li>
-                    </ul>
-                    <button>Order RN</button>
-                </div>
-                <div class="tab">
-                    <div class="tab-header">
-                        <div>
-                            <h1 class="name">Smol boi</h1>
-                        </div>
-                        <div>
-                            <h2 class="price">Rp 35k</h2>
-                        </div>
-                    </div>
-                    <hr>
-                    <ul class="list">
-                        <li>Pizza of your choice</li>
-                        <li>Snack of your choice</li>
-                    </ul>
-                    <button>Order RN</button>
-                </div>
+          <div class="tab">
+            <div class="tab-header">
+              <div>
+                <h1 class="name">Mid Boi</h1>
+              </div>
+              <div>
+                <h2 class="price">Rp 45k</h2>
+              </div>
             </div>
-    </section>
+            <hr />
+            <ul class="list">
+              <li>Pizza of your choice</li>
+              <li>2 Snack of your choice</li>
+            </ul>
+            <button>Order RN</button>
+          </div>
+          <div class="tab">
+            <div class="tab-header">
+              <div>
+                <h1 class="name">Big Boi</h1>
+              </div>
+              <div>
+                <h2 class="price">Rp 65k</h2>
+              </div>
+            </div>
+            <hr />
+            <ul class="list">
+              <li>Pizza of your choice</li>
+              <li>Pasta/Rice of your choice</li>
+              <li>Snack of you choice</li>
+            </ul>
+            <button>Order RN</button>
+          </div>
+          <div class="tab">
+            <div class="tab-header">
+              <div>
+                <h1 class="name">Smol boi</h1>
+              </div>
+              <div>
+                <h2 class="price">Rp 35k</h2>
+              </div>
+            </div>
+            <hr />
+            <ul class="list">
+              <li>Pizza of your choice</li>
+              <li>Snack of your choice</li>
+            </ul>
+            <button>Order RN</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-        <div class="center-footer">
-            <div class="main-footer">
-                <div class="left-footer">
-                    <h3 class="info-left"><i class="fas fa-map-pin"></i><b>Address</b></h3>
-                    <p class="info-left">104 Ankuding Street, New Ji, MD</p>
-                </div>
-                <div class="right-footer">
-                    <h3 class="info-right"></i><b>Contacts</b></h3>
-                    <p class="info-right"><i class="fas fa-phone"></i>Phone: 0821********</p>
-                    <p class="info-right"><i class="fab fa-instagram"></i>Instagram: @randomshit</p>
-                </div>
-            </div>
-            <div class="main-footer">
-                <p class="info-center">Copyright &copy; 2023A Designed By Someone</p>
-            </div>
+      <div class="center-footer">
+        <div class="main-footer">
+          <div class="left-footer">
+            <h3 class="info-left">
+              <i class="fas fa-map-pin"></i><b>Address</b>
+            </h3>
+            <p class="info-left">104 Ankuding Street, New Ji, MD</p>
+          </div>
+          <div class="right-footer">
+            <h3 class="info-right"><b>Contacts</b></h3>
+            <p class="info-right">
+              <i class="fas fa-phone"></i>Phone: 0821********
+            </p>
+            <p class="info-right">
+              <i class="fab fa-instagram"></i>Instagram: @randomshit
+            </p>
+          </div>
         </div>
+        <div class="main-footer">
+          <p class="info-center">Copyright &copy; 2023A Designed By Someone</p>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
