--- a/about.html
+++ b/about.html
@@ -18,8 +18,7 @@
     />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css" />
-  </head>
+    <script src="https://kit.fontawesome.com/dcb7aae9c6.js" crossorigin="anonymous"></script>  </head>
   <body>
     <header class="main-header">
       <div class="main-header">
