--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css"></link>
+    <script src="https://kit.fontawesome.com/dcb7aae9c6.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="main-header">
@@ -120,5 +120,6 @@
       </div>
     </footer>
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/dcb7aae9c6.js" crossorigin="anonymous"></script>
   </body>
 </html>
