--- a/detail5.html
+++ b/detail5.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link href="fontawesome/css/all.css" rel="stylesheet" type="text/css"></link>
-  </head>
+    <script src="https://kit.fontawesome.com/dcb7aae9c6.js" crossorigin="anonymous"></script>  </head>
   <body>
     <header class="main-header">
       <div class="main-header">
