fixing about and others

--- a/about.html
+++ b/about.html
@@ -18,7 +18,11 @@
     />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/dcb7aae9c6.js" crossorigin="anonymous"></script>  </head>
+    <script
+      src="https://kit.fontawesome.com/dcb7aae9c6.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
   <body>
     <header class="main-header">
       <div class="main-header">
@@ -37,24 +41,32 @@
     <main>
       <section id="about">
         <div class="about">
-          <div>
-            <h2 class="about">Crafting Happiness, One Slice at a Time</h2>
-            <p class="about">
-              At Pizza Heaven, we're passionate about pizza. We use fresh, local
-              ingredients to create delicious pizzas that bring people together.
-              From our slow-fermented dough to our mouthwatering toppings, every
-              bite is a taste of happiness.
+          <div class="about-text">
+            <h2>Crafting Happiness, One Slice at a Time</h2>
+            <p>
+              Pizza Heaven was founded in 2008 by Willy the duck, fueled by a
+              passion for creating delicious pizzas made with fresh,
+              high-quality ingredients. We believe pizza is more than just food;
+              it's a way to bring people together and create lasting memories.
             </p>
-            <h2 class="about">
-              <b>More than just pizza?</b> You bet! We offer a variety of
-              appetizers, salads, and desserts to satisfy every craving.
-            </h2>
-            <h3 class="about">
-              Come experience the warmth and inviting atmosphere of Pizza
-              Heaven. We're your neighborhood pizzeria for a casual meal or
-              special occasion.
-            </h3>
-            <h1>Stop by or order online today!</h1>
+            <h3>Our Commitment to Quality</h3>
+            <p>
+              We start with our slow-fermented dough, made with 00 Pizza Flour
+              for a perfect balance of flavor and texture. Then, we top it off
+              with a variety of fresh, local ingredients, including Peperoni,
+              Cheese, etc. We are committed to using seasonal ingredients
+              whenever possible to ensure the freshest and most flavorful
+              pizzas.
+            </p>
+            <h3>A Warm and Inviting Atmosphere</h3>
+            <p>
+              Step into Pizza Heaven and experience a warm and inviting
+              atmosphere. Our friendly staff is always happy to welcome you and
+              make your dining experience enjoyable. Whether you're looking for
+              a casual meal with friends or a special occasion dinner, we're the
+              perfect spot.
+            </p>
+            <p>We are proud to have been voted National Pizza of the Year.</p>
           </div>
         </div>
       </section>
